<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Foxdog Studios Ltd

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">BWARG (Slave)</string>
    <string name="settings">Settings</string>
    <string name="key_device_name">device_name</string>
    <string name="action_settings">Settings</string>
    <string name="resolution_label">Resolution</string>
    <string name="resolution_spinner_label">Resolution : </string>
    <string name="camera_label">Camera</string>
    <string name="flash_light_label">Flash</string>
    <string name="use_flash_label">Use flash</string>
    <string name="server_port_label">Server Port</string>
    <string name="server_name_label">Server Name</string>
    <string name="quality_label">Quality</string>
    <string name="image_label">Image</string>
    <string name="digits_decrement">-</string>
    <string name="digits_increment">-</string>
    <string name="resolution_times">x</string>
    <string name="address_dot">.</string>
    <string name="port_8080_with_explanation">8080 (for IP Webcam)</string>
    <string name="settings_done">Done</string>
    <string name="compression_method_label">Compression Method (soon)</string>
    <string name="jpeg_label">JPEG (bigger files, faster enc/dec)</string>
    <string name="bgp_label">BGP (smaller files, slower enc/dec)</string>
    <string name="camera_0_back">Back (Camera 0)</string>
    <string name="camera_1_front">Front (Camera 1)</string>
    <string name="interface_label">Interface</string>
    <string name="lock_keys_checkbox">Lock physical buttons (experimental)</string>
    <string name="image">Image</string>
    <string name="open_image_settings">Open image settings</string>
    <string name="capture_label">Capture</string>
    <string name="white_balance">White balance</string>
    <string name="auto_white_balance_lock">Auto white balance lock</string>
    <string name="exposure_label">Exposure</string>
    <string name="focus_mode_label">Focus mode</string>
    <string name="iso_label">ISO</string>
    <string name="extras_label">Extras</string>
    <string name="image_stabilization_checkBox">Stabilize image</string>
    <string name="auto_exposure_lock">Auto exposure lock</string>
    <string name="mode_label">Mode : </string>
    <string name="fast_fps_mode_checkbox">Fast FPS mode (recommended)</string>
</resources>

