<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_label"
                android:layout_margin="10dp"
                android:id="@+id/textView3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginLeft="20dp"
                android:id="@+id/camera_radiogroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_0_back"
                    android:id="@+id/camera_0" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_1_front"
                    android:id="@+id/camera_1" />
            </RadioGroup>

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_flash_label"
                android:id="@+id/flash_switch"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_label"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Spinner
                    android:id="@+id/resolution_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_label"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="1%"
                    android:id="@+id/quality_text"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="right"
                    android:textSize="@dimen/abc_text_size_menu_material" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/quality_seekbar"
                    android:max="99"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compression_method_label"
                android:layout_margin="10dp"
                android:id="@+id/textView"
                android:visibility="gone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="start"
                android:layout_marginLeft="20dp"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpeg_label"
                    android:id="@+id/radioButton3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bgp_label"
                    android:id="@+id/radioButton4" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_name_label"
                android:layout_margin="10dp"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="BWARG Slave"
                android:ems="10"
                android:id="@+id/name_input"
                android:maxLength="15"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_port_label"
                android:layout_margin="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <EditText
                    android:id="@+id/port_input"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="4" />

                <RadioGroup
                    android:id="@+id/port_radiogroup"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/port_8080"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port_8080_with_explanation" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interface_label"
                android:layout_margin="10dp"
                android:id="@+id/textView2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock_keys_checkbox"
                android:id="@+id/lockCheckbox"
                android:layout_marginLeft="20dp" />

            <Button
                android:id="@+id/settings_done"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_done"
                android:layout_margin="30dp" />
        </LinearLayout>
</ScrollView>